Fixed whitespace error

--- a/src/CSS/MatchHistory.css
+++ b/src/CSS/MatchHistory.css
@@ -164,7 +164,7 @@ li {
 }
 
 .match-details-table-2 {
-  margin-top: -2.5%;
+  margin-top: -2%;
 }
 
 .dmg-numbers {
